<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_change_requests"
            android:icon="@drawable/ic_menu_change_requests"
            android:title="@string/menu_change_requests" />

    </group>

    <group android:id="@+id/nav_footer"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/srt_logout" />
    </group>


</menu>
