<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:divider="@drawable/empty_tall_divider"
        android:showDividers="middle">

        <TextView
            android:id="@+id/tvDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---DAY---"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textColor="@color/dark_grey"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8"
            android:gravity="center"
            android:stretchColumns="*">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_from"
                android:textColor="@color/dark_grey"/>

            <TextView
                android:id="@+id/etFromTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="2"
                android:textSize="18sp"
                android:text="@string/time_7"
                android:textColor="@color/grey" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="end"
                android:text="@string/str_to"
                android:textColor="@color/dark_grey"/>

            <TextView
                android:id="@+id/etToTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="2"
                android:textSize="18dp"
                android:gravity="center"
                android:text="@string/time_9"
                android:textColor="@color/grey"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:id="@+id/tvFromTeacher"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="teacher1"
                android:textSize="20sp"
                android:textColor="@color/dark_grey"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/arrow_right"/>

            <TextView
                android:id="@+id/tvToTeacher"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="end"
                android:text="teacher2"
                android:textSize="20sp"
                android:textColor="@color/dark_grey"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvShow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/str_show"
                android:textSize="17sp"
                android:textColor="@color/grey"
                android:background="@drawable/selector_add_lesson"/>


            <TextView
                android:id="@+id/tvDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginEnd="10dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/str_delete"
                android:textSize="17sp"
                android:textColor="@color/grey"
                android:background="@drawable/selector_add_lesson"/>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>