<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFF">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_add_lesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/vClose"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_close" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="30dp"
                android:text="@string/btn_save" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:text="----Date----"
            android:textColor="@android:color/widget_edittext_dark"
            app:layout_constraintTop_toBottomOf="@+id/rl_add_lesson"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/ll_fromToTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_date"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/str_from" />

            <EditText
                android:id="@+id/etFromTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:focusable="false"
                android:longClickable="false"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="end"
                android:text="@string/str_to" />

            <EditText
                android:id="@+id/etToTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="2"
                android:longClickable="false"
                android:focusable="false"
                android:gravity="center" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_fromToTime">

            <TextView
                android:id="@+id/tvTeacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strTeacher"
                android:textSize="@dimen/time_textSize"
                android:paddingStart="5dp"/>

            <Spinner
                android:id="@+id/spinTeacher"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTeacher"
                android:layout_alignStart="@id/tvTeacher" />

            <TextView
                android:id="@+id/tvSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strSubject"
                android:textSize="@dimen/time_textSize"
                android:layout_marginTop="10dp"
                android:paddingStart="5dp"
                android:layout_alignStart="@+id/tvTeacher"
                android:layout_below="@id/spinTeacher"/>

            <Spinner
                android:id="@+id/spinSubject"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvSubject"/>

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>